RMSS:  Fix comment in
Sheet workers area so it's commented out correctly.

--- a/Rolemaster-Standard-System/charsheet_RMSS_fullcalcs_RollTemplates.html
+++ b/Rolemaster-Standard-System/charsheet_RMSS_fullcalcs_RollTemplates.html
@@ -1,10 +1,10 @@
 <!-- RoleMaster Standard System Character Sheet -->
 <!-- by Diana P. -->
 <!-- I borrowed some code/equations from Brian. And Sam. And Aaron I. And others -->
-<!-- Version 2.4.16 (full nested calculations; sheet helpers; tables to div/spans; removed sheet-.; copy armor) dated 11/18/2019 -->
+<!-- Version 2.4.17 (full nested calculations; sheet helpers; tables to div/spans; removed sheet-.; copy armor) dated 11/24/2019 -->
 <input type="hidden" name="attr_character_sheet" title="character-sheet" value="RMSS-FullCalcs"/>
-<input type="hidden" name="attr_currentsheetversion" title="currentsheetversion" value="4.16" />
-<p style="font-size: 0.6em;">V2.<span name="attr_sheetversion" title="sheetversion" ></span> 11/18/2019 by Diana P.</p>
+<input type="hidden" name="attr_currentsheetversion" title="currentsheetversion" value="4.17" />
+<p style="font-size: 0.6em;">V2.<span name="attr_sheetversion" title="sheetversion" ></span> 11/24/2019 by Diana P.</p>
 <input type="checkbox" class="announcement-show cbox" title="announcement-show" name="attr_announcement-show" value="1" checked />
 <div class="announcement">
 	<div class="table-style">
@@ -14383,13 +14383,13 @@ on("sheet:opened", function() {
 //  console.log('/* ----------exiting Setup OnChange ------------ */');
 });
 
- <!---- Calc rank bonus for repeating skills ---->
+// <!---- Calc rank bonus for repeating skills ---->
 on("change:repeating_skills change:rebonus change:mebonus change:embonus change:inbonus change:stbonus change:agbonus change:qubonus change:sdbonus change:prbonus change:cobonus", function() {
 //			console.log('/*-----------calc rep-skills rank bonus------*/');
 			SkillChange("repeating_skills_skillranks");
 });
 
- <!---- Calc rank bonus for repeating languages ---->
+// <!---- Calc rank bonus for repeating languages ---->
 on("change:repeating_langs", function() {
 //			console.log('/*-----------calc rep-languages rank bonus------*/');
 		SkillChange("repeating_langs_languagespokenranks");
