--- a/Forbidden_Lands/Forbidden_Lands.htm
+++ b/Forbidden_Lands/Forbidden_Lands.htm
@@ -1,4 +1,4 @@
-<!--11/17/19' set sheet version manually with currentVersion in sheetworkers-->
+<!--11/24/19' set sheet version manually with currentVersion in sheetworkers-->
 <input type="hidden" name="attr_version" value="0" />
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
 <input class="hidden" name="attr_recalc1" type="checkbox" />
@@ -16,18 +16,20 @@
     <span class="announcements-show toggle-dice-only toggle-monster-only" name="attr_version">&nbsp;</span>
     <div class="announcements toggle-dice-only toggle-monster-only">
         <h3 data-i18n="latest-announcements">Latest Announcements</h3>
-        <span class="footer">11/17/19'</span>
+        <span class="footer">11/24/19'</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
-            <span>v1.55</span>
-            <li>fixed missing sheetworker translation code(weapon, spell, push query, etc.)</li>
-            <li>optimized sheetworker code(Thank you GiGs).</li>
-            <li>small adjustments to the roll template's layout.</li>
+            <span>v1.56</span>
+            <li>fixed a bug that capped Base dice in the dice pool at "6" instead of "12".</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
         <span data-i18n-title="old-announcements">&nbsp;</span>
         <span class="announcements-older-show">
             <ol>
+                <span>v1.55</span>
+                <li>fixed missing sheetworker translation code(weapon, spell, push query, etc.)</li>
+                <li>optimized sheetworker code(Thank you GiGs).</li>
+                <li>small adjustments to the roll template's layout.</li>
                 <span>v1.54</span>
                 <li>added total cost to Hirelings on the Stronghold page.</li>
                 <li>added better title text to all action rolls to remind users to use the 'Roll' button to roll the dice.</li>
@@ -1974,7 +1976,7 @@
     /* version tracking */
     var Sheet = Sheet || (function () {
     
-        let currentVersion = 1.55,
+        let currentVersion = 1.56,
     
             newAnnouncement = function (v) {
                 getAttrs(["version", "show_announcements"], function (values) {
@@ -2258,7 +2260,7 @@
     /* Wes's Dice Pool */
     const pools = {
         attribute: {
-            max: 6,
+            max: 12,
             negative: 0
         },
         skill: {
