Added Mana-Value to magic spell casts in arask.html

--- a/Arask/arask.html
+++ b/Arask/arask.html
@@ -145,7 +145,7 @@ Is Master?
 <input type="number" name="attr_manaSpent" value="0"/>
 <text>==> Dice Mod</text>
 <input type="text" name="attr_manaSpentMod" value="" readonly/>
-<button type='roll' value="/em @{character_name} casts a magic spell!
+<button type='roll' value="/em @{character_name} casts a @{manaSpent}-Mana magic spell!
 /roll 1d10 + @{manaSpentMod} + ?{Other Mod|0}" name="roll_wizardPower"> Cast Spell</button>
 <hr>
 <!-- Affinity sections -->
