Final playbook custom sections

--- a/AW2E-Burned-Over/apocalypse-world-burned-over.html
+++ b/AW2E-Burned-Over/apocalypse-world-burned-over.html
@@ -38,7 +38,7 @@
     <label class="sheet-name"><span data-i18n="name">Name</span>:</label>
     <input type="text" name="attr_character_name"/><br/>
     <label class="sheet-name"><span data-i18n="first-impression">First Impression</span>:</label>
-    <textarea rows="3" cols="30" name="attr_first-impression"></textarea>
+    <input type="text" name="attr_first_impression"/><br/>
     <div class="lne">
         <label class="sheet-name"><span data-i18n="playbook-archetype">Playbook</span>:</label>
         <input type='checkbox' name='attr_lock_class' class='sheet-lock'>
@@ -338,8 +338,8 @@
                             <li><label class="sheet-improvement"><input type="checkbox" name="attr_weaponized-improvement-9" /> <span data-i18n="get-plus-sharp-max2">Get +1Sharp (max Sharp+2).</span></label></li>
                             <li><label class="sheet-improvement"><input type="checkbox" name="attr_weaponized-improvement-10" /> <span data-i18n="get-move-weaponized">Upgrade: get a new Weaponized move.</span></label></li>
                             <li><label class="sheet-improvement"><input type="checkbox" name="attr_weaponized-improvement-11" /> <span data-i18n="get-move-weaponized">Upgrade: get a new Weaponized move.</span></label></li>
-                            <li><label class="sheet-improvement"><input type="checkbox" name="attr_weaponized-improvement-12" /> <span data-i18n="exchange-machien-options">Exchange one of your machine's options for another.</span></label></li>
-                            <li><label class="sheet-improvement"><input type="checkbox" name="attr_weaponized-improvement-13" /> <span data-i18n="exchange-machien-options">Exchange one of your machine's options for another.</span></label></li>
+                            <li><label class="sheet-improvement"><input type="checkbox" name="attr_weaponized-improvement-12" /> <span data-i18n="exchange-machine-options">Exchange one of your machine's options for another.</span></label></li>
+                            <li><label class="sheet-improvement"><input type="checkbox" name="attr_weaponized-improvement-13" /> <span data-i18n="exchange-machine-options">Exchange one of your machine's options for another.</span></label></li>
                             <li><label class="sheet-improvement"><input type="checkbox" name="attr_weaponized-improvement-14" /> <span data-i18n="get-move-other">Get a move from an unused playbook.</span></label></li>
                             <li><label class="sheet-improvement"><input type="checkbox" name="attr_weaponized-improvement-15" /> <span data-i18n="get-move-other">Get a move from an unused playbook.</span></label></li>
                             <li><hr></li>
@@ -353,7 +353,7 @@
             </div>
         </div> <!-- END COL 1 -->
         <div class="sheet-col even"> <!-- COL 2 -->
-            <label class="sheet-class-moves sheet-section-title"><span data-i18n="stats">Effects</span>:</label>
+            <label class="sheet-class-moves sheet-section-title"><span data-i18n="effects">Effects</span>:</label>
             <div class="sheet-attr-box">
                 <label class="sheet-weapon sheet-name"><span data-i18n="weapon">Weapon</span>:</label>
                 <input type="number" name="attr_weapon" value="0" />
@@ -628,21 +628,47 @@
             <!-- End Undaunted Custom Section-->
             <!-- Begin Vigilant Custom Section-->
             <div class="sheet-box sheet-vigilant">
+                <label class="sheet-other sheet-section-title"><span data-i18n="wolves-maelstrom">Wolves of the Maelstrom</span>:</label><br/>
                 <small><span data-il8n="wolves-descr-1">You know the wolves of the maelstrom. You might be the only one who does.</span></small><br>
                 <small><span data-il8n="wolves-descr-2">Under their disguises, they look like (choose 1)</span>:</small>
                     <ul>
-                        <li><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-1" /> <span data-i18n="wolves-option-1"></span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-1" /> <span data-i18n="wolves-option-1">people</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-2" /> <span data-i18n="wolves-option-2">birds</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-3" /> <span data-i18n="wolves-option-3">beasts</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-4" /> <span data-i18n="wolves-option-4">insects</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-5" /> <span data-i18n="wolves-option-5">angels</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-6" /> <span data-i18n="wolves-option-6">shadows</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-7" /> <span data-i18n="wolves-option-7">machines</span></label></li>
                     </ul>
+                <small><span data-il8n="wolves-descr-3">But (choose 2)</span>:</small>
+                    <ul class="inline">
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-8" /> <span data-i18n="wolves-option-8">they have no faces</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-9" /> <span data-i18n="wolves-option-9">they have human faces</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-10" /> <span data-i18n="wolves-option-11">they have wolves' faces</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-12" /> <span data-i18n="wolves-option-12">they have awful voices</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-13" /> <span data-i18n="wolves-option-13">they have no expression</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-14" /> <span data-i18n="wolves-option-14">they're dripping gore</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-15" /> <span data-i18n="wolves-option-15">they only howl</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-16" /> <span data-i18n="wolves-option-16">they don't stand on the ground</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-17" /> <span data-i18n="wolves-option-17">they make terrible grinding noises</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-18" /> <span data-i18n="wolves-option-18">they are made of metal and plastic</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-19" /> <span data-i18n="wolves-option-19">they have empty holes for eyes</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-20" /> <span data-i18n="wolves-option-20">they come and go impossibly</span></label></li>
+                        <li class="inline"><label class="sheet-improvement"><input type="checkbox" name="attr_wolves-option-21" /> <span data-i18n="wolves-option-21">they're invisible</span></label></li>
+                    </ul>
+                <small><span data-il8n="wolves-descr-4">Tell the MC the above, and to create them as threats</span></small>
             </div>
             <!-- End Vigilant Custom Section-->
-            <div class="sheet-box sheet-volatile">
-                <label class="sheet-other sheet-section-title"><span data-i18n="your-bike">Your Bike</span>:</label>
-                <div><label class="sheet-custom"><span data-i18n="strength">Strength</span>:</label></div>
-                <div><input type="text" name="attr_bikestrength" /></div>
-                <div><label class="sheet-custom"><span data-i18n="looks">Looks</span>:</label></div>
-                <div><input type="text" name="attr_bikelook" /></div>
-                <div><label class="sheet-custom"><span data-i18n="weaknesses">Weaknesses</span>:</label></div>
-                <div><input type="text" name="attr_bikeweakness" /></div>
+            <div class="sheet-box sheet-weaponized">
+                <label class="sheet-other sheet-section-title"><span data-i18n="your-machine">Your Machine</span>:</label><br/>
+                <small><span data-il8n="your-machine-descr-1">You are not only human, you’re also a machine, built for war. Your machine drives you and makes demands of you. Choose 2</span>:</small>
+                <ul>
+                    <li><label class="sheet-improvement"><input type="checkbox" name="attr_machine-option-1" /> <span data-i18n="machine-option-1"><strong>AI Override</strong>: Tell the MC to create your AI override as a <strong>warlord</strong> threat. Once per session, and more often if you choose, tell the MC that your AI override takes over. Ask the MC what you do</span></label></li>
+                    <li><label class="sheet-improvement"><input type="checkbox" name="attr_machine-option-2" /> <span data-i18n="machine-option-2"><strong>Fury</strong>: When you <strong>confront someone</strong>, there’s no appeasing you. If they back down, mollify, prevaricate, or submit to you in any way, it provokes you; count it as forcing your hand. If they get away from you instead, you must pursue them and press the attack</span></label></li>
+                    <li><label class="sheet-improvement"><input type="checkbox" name="attr_machine-option-3" /> <span data-i18n="machine-option-3"><strong>Hive mind</strong>: You share thoughts and senses with others like you. Tell the MC to create other Weaponized as <strong>infiltrator</strong> threats. At any time, the MC can interrupt you to tell you what another Weaponized somewhere is seeing, feeling, and doing, or to have another Weaponized somewhere ask you what you’re seeing, feeling, and doing</span></label></li>
+                    <li><label class="sheet-improvement"><input type="checkbox" name="attr_machine-option-4" /> <span data-i18n="machine-option-4"><strong>Killing instinct</strong>: When you <strong>do battle</strong>, and whenever you have the opportunity to do so otherwise, you must spend at least 1 to inflict additional harm</span></label></li>
+                    <li><label class="sheet-improvement"><input type="checkbox" name="attr_machine-option-5" /> <span data-i18n="machine-option-5"><strong>Manual override</strong>: When someone tells you to do something, if they say the words "manual override," you don’t have a choice, you have to undertake to do it</span></label></li>
+                </ul>:
             </div>
             <label class="sheet-other sheet-section-title"><span data-i18n="gear">Gear</span>:</label>
                 <textarea rows="4" cols="50" name="attr_gear"></textarea>
