[Savage Worlds Tabbed] Charisma Config
Added a configuration option to disable Charisma, as it's not used in SWADE.

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -5961,7 +5961,7 @@
     					        <div class="sheet-derivemisc">&nbsp;</div>
     					    </div>
     					    <!-- Charisma -->
-    					    <input type="checkbox" class="sheet-useCharisma" name="attr_usecharisma" style="display: none;" checked />
+    					    <input type="checkbox" class="sheet-useCharisma" name="attr_usecharisma" style="display: none;"/>
     					    <div class="sheet-basederived sheet-charisma">
     					        <div class="sheet-derivelabel" data-i18n="charisma">Charisma</div>
     					        <div class="sheet-derivebase"><input type="number" name="attr_charisma" class="sheet-derivedStat" title="@{charisma}" value="0"/></div>
