--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1,5 +1,5 @@
 
-<input name="attr_version" type="hidden" value="3.02"/>
+<input name="attr_version" type="hidden" value="3.021"/>
 <input class="sheet_type" name="attr_sheet_type" type="hidden" value="pc"/>
 <input class="character-type" name="attr_flag_special" type="hidden" value="mundane"/>
 <div class="pc">
@@ -4275,204 +4275,7 @@
 	        });
 	    });
 
-
-// CHARACTERMANCER IMPORTER
-	on("clicked:import_launch", (eventinfo) => {
-		startCharactermancer("importer");
-	});
-
-	on("page:importer", () => {
-		setAttrs({builder: "Chummer"});
-		setCharmancerText({
-			"directions" : chummerDirections
-		});
-	});
-
-	on("clicked:import", () => {
-		const mancerData = getCharmancerData();
-		const mancerValues = mancerData["importer"].values;
-		let applyEnabled = true;
-	    let setText = {};
-
-	    // Verify the user entered a JSON in the textarea. If not, provide user feedabck.
-	    if (mancerValues.jsonData) {
-	    	const parsedData = JSON.parse(mancerValues.jsonData) || false;
-	    	setText[`import-feedback`] = "";
-	    	// There is a value in the textarea! Check to see if its a valid JSON. Provide users feeadback 
-	    	if (parsedData) {
-	    		setText[`import-feedback`] += `<p class="feedback">A valid JSON was imported for ${mancerValues.builder}.</p>`
-		      // Send the parsed data to the selected importer or let users know something went wrong 
-		      if (mancerValues.builder && mancerValues.builder === "Chummer") {
-				if (parsedData.characters && parsedData.characters.character) {
-					importChummer(parsedData.characters.character);
-		      	} else {
-					setText[`import-feedback`] += `<p class="warning">Parsed JSON is missing character data.</p>`;
-					applyEnabled = false
-		      	}
-		      } else if (mancerValues.builder && mancerValues.builder === "Hero Lab") {
-		      	importHeroLab();
-		      	setText[`import-feedback`] += `<p class="warning">Coming Soon....</p>`;
-		      } else {
-		      	setText[`import-feedback`] += `<p class="warning">A character builder was not selected. Try changing your selection then change it back if needed.</p>`;
-		      	applyEnabled = false
-		      }
-		    } else {
-		      setText[`import-feedback`] += `<p class="warning"><span>The text imported is not a valid JSON. Verify the JSON is formatted correctly. Check the format at,</span> JSONLint.com.</p>`;
-		      applyEnabled = false
-		    };
-	    } else {
-	    	 setText[`import-feedback`] = `<p class="warning">No information was entered in the JSON text area.</p>`;
-	    	 applyEnabled = false
-	    };
-
-	    let buttonStatus = (applyEnabled) ? "" : "disabled";
-	    setText[`finish-button`] = `<button class="finish" type="finish" value="apply" data-i18n="apply" ${buttonStatus}>Apply</button>`;
-
-	    setCharmancerText(setText);
-	});
-
-	const chummerDirections = `<ol>
-				<li>In Chummer mark your character as created</li>
-				<li>Go to File -> Export -> Export JSON</li>
-				<li>Copy the JSON in the file</li>
-				<li>Paste it into the textfield below</li>
-				<li>Click the Import button</li>
-				<li>Review the data. Use the checkbox <strong>Show Hidden Inputs</strong> to fix data.</li> 
-				<li>Click Apply to <u>overwrite</u> information on the character sheet</li>
-			</ol>`;
-
-	const herolabDirections = `
-		<ol>
-			<li>Download the file "HLtoRoll20Export.hl" from: https://drive.google.com/file/d/0B3E3jkp51s8aRmpTU1NMRjRIVkk/view</li>
-			<li>Double click the file. Hero Lab will import it automatically now.</li>
-			<li>Load a character</li>
-			<li>Go to File/Save Custom Output and select the "Roll20 Export"</li>
-			<li>Save the file. It should open automatically in your browser</li>
-			<li>Follow the directions.</li>
-		</ol>`;
-
-	on("change:builder", (eventinfo) => {
-		let setText = {};
-		setText[`directions`] = (eventinfo.newValue === "Chummer") ? chummerDirections : herolabDirections;
-		setCharmancerText(setText);
-	});
-
-  const clean = () => {
-    ['active', 'knowledge', 'language', 'quality', 'martial',
-      'range', 'melee', 'weapon', 'armor', 'augementations',
-      'items', 'NPCspell', 'spell', 'rituals', 'preps', 'powers',
-      'contacts', 'vehicle', 'lifestyle', "programs", "forms"].forEach(group => {
-      getSectionIDs(`repeating_${group}`, (ids) => {
-        ids.forEach((id) => {
-          removeRepeatingRow(`repeating_${group}_${id}`);
-        });
-      });
-    });
-  };
-
-	//USEFUL FUNCTIONS
-	const capitialize = (string) => {
-		return string.charAt(0).toUpperCase() + string.slice(1);
-	};
-
-	const addFeedback = (attribute, value) => {
-		return `<p class="feedback"><strong>${capitialize(attribute)}:</strong> ${value} </p>`
-	};
-
-	const alphabatizeKeys = (unsortedJSON) => {
-		let alphabeticalKeys = {};
-		Object.keys(unsortedJSON).sort().forEach((key) => {
-			  alphabeticalKeys[key] = unsortedJSON[key];
-		});
-		return alphabeticalKeys
-	};
-
-	const getValInParen = (value) => {
-		return value.split("(")[1].split(")")[0];
-	};
-
-	const getArray = (array) => {
-		return Array.isArray(array) ? array : [ array ];
-	};
-
-	const getSplitNum = (value) => {
-		return value.split("/")[0];
-	}
-</script><!-- CHARACTERMANCER IMPORTER -->
-<charmancer class="sheet-charmancer-importer">
-	<div class="mancer-box">
-		<h1>Shadowrun Fifth Edition Character Importer</h1>
-		<h2>Setup</h2>
-		<p>This will import character JSON data generated from Chummer 5. This is an <em>experimental</em> feature which is not 100% completed. It will save you a bit of time when bringing a character to Roll20.</p>	
-		<h3>Pick Character Builder</h3>
-		<div class="pick-builder">
-			<label title="choose chummer">
-				<h4>Chummer</h4>
-				<input type="radio" name="comp_builder" value="Chummer" checked />
-			</label>
-			<!--<label title="choose hero lab">
-				<h4>Hero Lab</h4>
-				<input type="radio" name="comp_builder" value="Hero Lab" />
-			</label>-->
-		</div>
-		<div class="directions"></div>
-		<h3>Enter JSON Here</h3>
-		<textarea name="comp_jsonData" placeholder="Add JSON here"></textarea>
-		<button type="action" name="act_import" data-i18n="import">Import</button>
-
-		<hr />
-
-		<h2>Results</h2>
-		<!-- <p>Review for errors and resolve them in your JSON as needed before completing the import by clicking Apply.</p> -->
-		<div class="import-feedback"><p>Enter a JSON string in the text area above.</p></div>
-		<div class="result-grid">
-			<h3>Character data to be updated</h3>
-			<div class="results"><p>Import button has not been pressed yet.</p></div>
-			<h3>Character data not to be updated</h3>
-			<div class="error"><p>Import button has not been pressed yet.</p></div>
-		</div>
-		<h4 class="hidden-header">Show Hidden Inputs</h4>
-		<input type="checkbox" name="comp_hidden" value="on">
-		<div class="hidden"></div>
-
-		<hr />
-
-		<h2>Complete</h2>
-		<p>After reviewing the data above, click Apply. This will <strong>overwrite</strong> data on the sheet where applicable.</p>
-		<h3>Chummer Notes</h3>
-		<ul>
-    		<li>
-    			Chummer frequently has the wrong information for <strong>Weapons</strong>. Review them in the Arms tab after clicking apply.
-    		</li>
-    		<li>
-    			<strong>specialization</strong> will not be applied to Weapons or Magic. You will need to manually update the checkbox.
-    		</li>
-    		<li>
-    			<strong>Vehicles</strong> will not be imported.
-    		</li>
-    		<li>
-    			<strong>Complex Forms</strong> will not be imported.
-    		</li>
-    	</ul>
-		<div class="finish-button">
-			<button class="finish" type="finish" value="apply" data-i18n="apply" disabled>Apply</button>
-		</div>
-
-		 <div class="bottombar">
-		   <button class="prev" type="cancel" value="cancel" data-i18n="cancel">Cancel</button>
-		 </div>
-	 </div>
-</charmancer>
-
-<charmancer class="sheet-charmancer-final">
-    <div class="charmancer">
-        <div class="">
-           <h1>Importing your Shadowrun character...overwriting previous data</h1>
-           <img alt="emerald productions, llc" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/EProd_Title_Green.jpg" />
-        </div>
-    </div>
-</charmancer>
-<script>
+</script><script type="text/worker">
 	//IMPORTERS
 	const importHeroLab = (character) => {
 		console.log(`%c HERO LAB IMPORTER:`, "color: purple; font-weight:bold");
@@ -5248,4 +5051,201 @@
 			finishCharactermancer();
 		});
 	}); 
-</script>
+
+
+// CHARACTERMANCER IMPORTER
+	const chummerDirections = `<ol>
+				<li>In Chummer mark your character as created</li>
+				<li>Go to File -> Export -> Export JSON</li>
+				<li>Copy the JSON in the file</li>
+				<li>Paste it into the textfield below</li>
+				<li>Click the Import button</li>
+				<li>Review the data. Use the checkbox <strong>Show Hidden Inputs</strong> to fix data.</li> 
+				<li>Click Apply to <u>overwrite</u> information on the character sheet</li>
+			</ol>`;
+
+	const herolabDirections = `
+		<ol>
+			<li>Download the file "HLtoRoll20Export.hl" from: https://drive.google.com/file/d/0B3E3jkp51s8aRmpTU1NMRjRIVkk/view</li>
+			<li>Double click the file. Hero Lab will import it automatically now.</li>
+			<li>Load a character</li>
+			<li>Go to File/Save Custom Output and select the "Roll20 Export"</li>
+			<li>Save the file. It should open automatically in your browser</li>
+			<li>Follow the directions.</li>
+		</ol>`;
+
+	on("change:builder", (eventinfo) => {
+		let setText = {};
+		setText[`directions`] = (eventinfo.newValue === "Chummer") ? chummerDirections : herolabDirections;
+		setCharmancerText(setText);
+	});
+
+  const clean = () => {
+    ['active', 'knowledge', 'language', 'quality', 'martial',
+      'range', 'melee', 'weapon', 'armor', 'augementations',
+      'items', 'NPCspell', 'spell', 'rituals', 'preps', 'powers',
+      'contacts', 'vehicle', 'lifestyle', "programs", "forms"].forEach(group => {
+      getSectionIDs(`repeating_${group}`, (ids) => {
+        ids.forEach((id) => {
+          removeRepeatingRow(`repeating_${group}_${id}`);
+        });
+      });
+    });
+  };
+
+	//USEFUL FUNCTIONS
+	const capitialize = (string) => {
+		return string.charAt(0).toUpperCase() + string.slice(1);
+	};
+
+	const addFeedback = (attribute, value) => {
+		return `<p class="feedback"><strong>${capitialize(attribute)}:</strong> ${value} </p>`
+	};
+
+	const alphabatizeKeys = (unsortedJSON) => {
+		let alphabeticalKeys = {};
+		Object.keys(unsortedJSON).sort().forEach((key) => {
+			  alphabeticalKeys[key] = unsortedJSON[key];
+		});
+		return alphabeticalKeys
+	};
+
+	const getValInParen = (value) => {
+		return value.split("(")[1].split(")")[0];
+	};
+
+	const getArray = (array) => {
+		return Array.isArray(array) ? array : [ array ];
+	};
+
+	const getSplitNum = (value) => {
+		return value.split("/")[0];
+	}
+
+		on("clicked:import_launch", (eventinfo) => {
+		startCharactermancer("importer");
+	});
+
+	on("page:importer", () => {
+		setAttrs({builder: "Chummer"});
+		setCharmancerText({
+			"directions" : chummerDirections
+		});
+	});
+
+	on("clicked:import", () => {
+		const mancerData = getCharmancerData();
+		const mancerValues = mancerData["importer"].values;
+		let applyEnabled = true;
+	    let setText = {};
+
+	    // Verify the user entered a JSON in the textarea. If not, provide user feedabck.
+	    if (mancerValues.jsonData) {
+	    	const parsedData = JSON.parse(mancerValues.jsonData) || false;
+	    	setText[`import-feedback`] = "";
+	    	// There is a value in the textarea! Check to see if its a valid JSON. Provide users feeadback 
+	    	if (parsedData) {
+	    		setText[`import-feedback`] += `<p class="feedback">A valid JSON was imported for ${mancerValues.builder}.</p>`
+		      // Send the parsed data to the selected importer or let users know something went wrong 
+		      if (mancerValues.builder && mancerValues.builder === "Chummer") {
+				if (parsedData.characters && parsedData.characters.character) {
+					importChummer(parsedData.characters.character);
+		      	} else {
+					setText[`import-feedback`] += `<p class="warning">Parsed JSON is missing character data.</p>`;
+					applyEnabled = false
+		      	}
+		      } else if (mancerValues.builder && mancerValues.builder === "Hero Lab") {
+		      	importHeroLab();
+		      	setText[`import-feedback`] += `<p class="warning">Coming Soon....</p>`;
+		      } else {
+		      	setText[`import-feedback`] += `<p class="warning">A character builder was not selected. Try changing your selection then change it back if needed.</p>`;
+		      	applyEnabled = false
+		      }
+		    } else {
+		      setText[`import-feedback`] += `<p class="warning"><span>The text imported is not a valid JSON. Verify the JSON is formatted correctly. Check the format at,</span> JSONLint.com.</p>`;
+		      applyEnabled = false
+		    };
+	    } else {
+	    	 setText[`import-feedback`] = `<p class="warning">No information was entered in the JSON text area.</p>`;
+	    	 applyEnabled = false
+	    };
+
+	    let buttonStatus = (applyEnabled) ? "" : "disabled";
+	    setText[`finish-button`] = `<button class="finish" type="finish" value="apply" data-i18n="apply" ${buttonStatus}>Apply</button>`;
+
+	    setCharmancerText(setText);
+	});
+</script><!-- CHARACTERMANCER IMPORTER -->
+<charmancer class="sheet-charmancer-importer">
+	<div class="mancer-box">
+		<h1>Shadowrun Fifth Edition Character Importer</h1>
+		<h2>Setup</h2>
+		<p>This will import character JSON data generated from Chummer 5. This is an <em>experimental</em> feature which is not 100% completed. It will save you a bit of time when bringing a character to Roll20.</p>	
+		<h3>Pick Character Builder</h3>
+		<div class="pick-builder">
+			<label title="choose chummer">
+				<h4>Chummer</h4>
+				<input type="radio" name="comp_builder" value="Chummer" checked />
+			</label>
+			<!--<label title="choose hero lab">
+				<h4>Hero Lab</h4>
+				<input type="radio" name="comp_builder" value="Hero Lab" />
+			</label>-->
+		</div>
+		<div class="directions"></div>
+		<h3>Enter JSON Here</h3>
+		<textarea name="comp_jsonData" placeholder="Add JSON here"></textarea>
+		<button type="action" name="act_import" data-i18n="import">Import</button>
+
+		<hr />
+
+		<h2>Results</h2>
+		<!-- <p>Review for errors and resolve them in your JSON as needed before completing the import by clicking Apply.</p> -->
+		<div class="import-feedback"><p>Enter a JSON string in the text area above.</p></div>
+		<div class="result-grid">
+			<h3>Character data to be updated</h3>
+			<div class="results"><p>Import button has not been pressed yet.</p></div>
+			<h3>Character data not to be updated</h3>
+			<div class="error"><p>Import button has not been pressed yet.</p></div>
+		</div>
+		<h4 class="hidden-header">Show Hidden Inputs</h4>
+		<input type="checkbox" name="comp_hidden" value="on">
+		<div class="hidden"></div>
+
+		<hr />
+
+		<h2>Complete</h2>
+		<p>After reviewing the data above, click Apply. This will <strong>overwrite</strong> data on the sheet where applicable.</p>
+		<h3>Chummer Notes</h3>
+		<ul>
+    		<li>
+    			Chummer frequently has the wrong information for <strong>Weapons</strong>. Review them in the Arms tab after clicking apply.
+    		</li>
+    		<li>
+    			<strong>specialization</strong> will not be applied to Weapons or Magic. You will need to manually update the checkbox.
+    		</li>
+    		<li>
+    			<strong>Vehicles</strong> will not be imported.
+    		</li>
+    		<li>
+    			<strong>Complex Forms</strong> will not be imported.
+    		</li>
+    	</ul>
+		<div class="finish-button">
+			<button class="finish" type="finish" value="apply" data-i18n="apply" disabled>Apply</button>
+		</div>
+
+		 <div class="bottombar">
+		   <button class="prev" type="cancel" value="cancel" data-i18n="cancel">Cancel</button>
+		 </div>
+	 </div>
+</charmancer>
+
+<charmancer class="sheet-charmancer-final">
+    <div class="charmancer">
+        <div class="">
+           <h1>Importing your Shadowrun character...overwriting previous data</h1>
+           <img alt="emerald productions, llc" src="https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Shadowrun5thEdition/images/EProd_Title_Green.jpg" />
+        </div>
+    </div>
+</charmancer>
