--- a/Shadowrun Sixth World/Shadowrun6thEdition.html
+++ b/Shadowrun Sixth World/Shadowrun6thEdition.html
@@ -409,11 +409,6 @@
                   <option data-i18n="magic" value="@{magic}">Magic</option>
                   <option data-i18n="resonance" value="@{resonance}">Resonance</option>
                 </select>
-                <select class="limit-select" name="attr_type" value="active" title="undefined_type}">
-                  <option data-i18n="Active" value="@{active}">Active</option>
-                  <option data-i18n="Knowledge" value="@{knowledge}">Knowledge</option>
-                  <option data-i18n="Language" value="@{language}">Language</option>
-                </select>
                 <input class="collapse-flag" name="attr_display_flag" type="checkbox"/><span class="pictos">i</span>
                 <input class="settings-flag" name="attr_flag" title="Settings toggle" type="checkbox" checked="checked"/><span class="pictos">x</span>
                 <div class="collapse"><span name="attr_notes"></span></div>
@@ -448,8 +443,16 @@
                     <input name="attr_rating_modifier" placeholder="0" type="number" title="undefined_rating_modifier}"/>
                   </label>
                   <label data-i18n-title="specialization" title="specialization"> <span data-i18n="specialization">specialization</span>
-                    <input name="attr_specialization}" placeholder="Specalizations" type="text" title="undefined_specialization}"/>
+                    <input name="attr_specialization}" placeholder="specialization" type="text" title="undefined_specialization}"/>
                   </label>
+                  <label data-i18n-title="focus" title="focus"> <span data-i18n="focus">focus</span>
+                    <input name="attr_focus}" placeholder="focus" type="text" title="undefined_focus}"/>
+                  </label>
+                  <select name="attr_type" value="active" title="undefined_type}">
+                    <option data-i18n="Active" value="@{active}">Active</option>
+                    <option data-i18n="Knowledge" value="@{knowledge}">Knowledge</option>
+                    <option data-i18n="Language" value="@{language}">Language</option>
+                  </select>
                   <label data-i18n-title="notes" title="notes"><span data-i18n="notes">Notes</span>
                     <textarea name="attr_notes" value="" placeholder="Notes" title="undefined_notes}"></textarea>
                   </label>
@@ -1828,12 +1831,6 @@
 							<option value="vehicle" data-i18n="vehicle">Vehicle</option>
 						</select>
 					</div>
-					<hr />
-					<div>
-						<h2 data-i18n="importer">Importer</h2>
-						<button type="action" name="act_import_launch" data-i18n="importecharacter">Import Character</button>
-						<p data-i18n="importertext">You can import a character with a JSON from Chummer. <!--or Hero Lab.--> The game owner must set a Compendium in the Game Settings. It does not matter which one you pick. Charactermancer software simply requires one be picked.</p>
-					</div>
 				</div>
 				<div class="op-col">
 					<div>
@@ -1854,10 +1851,6 @@
 						<hr />
 						<label data-i18n="initiative">Initiative</label><input type="number" name="attr_initiative_temp" title="@{initiative_temp}" /><input type="checkbox" name="attr_initiative_temp_flag" value="on" checked />
 						<label data-i18n="initiativedice">Initiative Dice</label><input type="number" name="attr_initiative_dice_temp" title="@{initiative_dice_temp}" /><input type="checkbox" name="attr_initiative_dice_temp_flag" value="on" checked />
-						<hr />
-						<label data-i18n="mentallimit">Mental Limit</label><input type="number" name="attr_mental_limit_temp" title="@{mental_limit_temp}" /><input type="checkbox" name="attr_mental_limit_temp_flag" value="on" checked />
-						<label data-i18n="physicallimit">Physical Limit</label><input type="number" name="attr_physical_limit_temp" title="@{physical_limit_temp}" /><input type="checkbox" name="attr_physical_limit_temp_flag" value="on" checked />
-						<label data-i18n="sociallimit">Social Limit</label><input type="number" name="attr_social_limit_temp" title="@{social_limit_temp}" /><input type="checkbox" name="attr_social_limit_temp_flag" value="on" checked />
 					</div>
 				</div>
 			</div>
