added ritual assets

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -2212,126 +2212,136 @@ var combatTalentAssets = {
         ] 
     },
     'thunder-bringer': {
-        requirement: "",
+        requirement: "If you wield a mighty hammer...",
         skills: [
-            "",
-            "",
-            ""
+            "When you Face Danger, Secure an Advantage, or Compel by hitting or breaking an inanimate object, add +1 and take +1 momentum on a hit.",
+            "When you Strike a foe and score a strong hit, take +1 momentum as you also knock them back, stun them, or put them off-balance.",
+            "When you Turn the Tide, you may Strike with all the fury and power you can muster. If you do (decide before rolling), you may reroll any dice and inflict +1 harm on a strong hit, but count a weak hit as a miss"
         ] 
     }
 };
 
 var ritualAssets = {
-    '': {
-        requirement: "",
+    'augur': {
         skills: [
-            "",
-            "",
-            ""
+            "When you summon a flock of crows and ask a single question, roll +wits. On a strong hit, you interpret their calls as a helpful omen. Envision the response (Ask the Oracle if unsure) and take +2 momentum. On a weak hit, the crows ignore your question and offer a clue to an unrelated problem or opportunity in this area. Envision what you learn (Ask the Oracle if unsure), and take +1 momentum.",
+            "As above, and the crows will also help guide you on the proper path. On a hit, add +1 on the next segment when you Undertake a Journey.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'awakening': {
         skills: [
-            "",
-            "",
-            ""
+            "When you create a simulacrum, roll +heart. On a strong hit, your creation is given unnatural life. If it aids you as you make a move to assault or overcome an obstacle through strength, add +2. It has 3 health and suffers harm as appropriate, but is not a companion and may not be healed. At 0 health, it is dead. On a weak hit, as above, but if you roll a 1 on your action die when aided by your creation, you must Face Danger +heart to keep it from turning on you (as a formidable foe).",
+            "Your simulacrum has 6 health.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
+        ] ,
+        track: '6'
+    },
+    'bind': {
+        skills: [
+            "When you wear an animal pelt and dance in moonlight, roll +wits. On a strong hit, you or an ally may wear the pelt and add +1 when making moves with the related stat (wolf-edge; beariron; deer-heart; fox-shadow; boarwits). If the wearer rolls a 1 on their action die while making a move using the pelt, the magic is spent. On a weak hit, as above, but the wilds call as you dance; Endure Stress (2 stress).",
+            "As above, and you may instead perform this ritual wearing the pelt of a beast. If you do, name the related stat and add +2 (instead of +1).",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'communion': {
         skills: [
-            "",
-            "",
-            ""
+            "When you surround the remains of a recently deceased intelligent creature with lit candles, and summon its spirit, roll +heart. Add +1 if you share a bond. On a strong hit, the spirit appears and you may converse for a few minutes. Make moves as appropriate (add +1). On a weak hit, as above, but the spirit also delivers troubling news unrelated to your purpose. Envision what it tells you (Ask the Oracle if unsure) and Endure Stress (1 stress).",
+            "As above, and you may also commune with the long-dead.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit"
         ] 
     },
-    '': {
-        requirement: "",
+    'divination': {
         skills: [
-            "",
-            "",
-            ""
+            "When you take a drop of blood from a willing subject (not yourself) and cast the rune-carved stones, roll +heart. On a strong hit, you may read the runes to Gather Information about the subject and people close to them, including insight you and the subject have no knowledge of. If you do, add +1. On a weak hit, as above, but the answers are revealed only with extra time and focus; suffer -2 momentum.",
+            "As above, and your divination can also reveal information about the subject’s future.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'invoke': {
         skills: [
-            "",
-            "",
-            ""
+            "When you consume the mystical essence of your surroundings, roll +wits. On a strong hit, add the value of your action die to your essence track (max 6). You may then Secure an Advantage or Face Danger +essence to create minor mystical effects or illusions. If you do, suffer -1 essence and take +1 momentum on a hit. On a weak hit, as above, but capturing these energies is harrowing; Endure Stress (2 stress).",
+            "You may Compel +essence (and suffer -1 essence) through a show of power.",
+            "When you perform this ritual, add +1 and take +1 essence on a hit."
+        ],
+        track: '6'
+    },
+    'keen': {
+        skills: [
+            "When you hold a weapon and sing a keen for those it has killed, roll +heart. On a strong hit, the wielder inflicts +1 harm when they Strike or Clash. If they roll a 1 on their action die when making a move to inflict harm, the magic is spent. On a weak hit, as above, but the voices of those who were slain join in your song; Endure Stress (2 stress).",
+            "As above, and the wielder may also (one time only) add +1 and take +2 momentum on a hit when they Draw the Circle, Enter the Fray, or Battle.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'leech': {
         skills: [
-            "",
-            "",
-            ""
+            "When you mark your hands or weapon with an intricate blood rune, roll +iron. On a strong hit, the rune thirsts for fresh blood. One time only, when you make a move to inflict harm, reroll any dice and inflict +2 harm on a hit. Then, for each point of harm inflicted, take +1 and allocate it as +health or +momentum. On a weak hit, as above, but this asset counts as a debility until the rune’s thirst is quenched.",
+            "As above, and you may also touch an ally or companion and let them take +1 health or momentum for each unallocated point.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'lightbearer': {
         skills: [
-            "",
-            "",
-            ""
+            "When you focus on a source of light and capture its essence, roll +wits. On a strong hit, set your light track to +6. On a weak hit, make it +3. Then, when you make a move to overcome or navigate darkness, you may add +2 and suffer -1 light.",
+            "You may use your light to Strike or Clash against a dark-dwelling foe. Choose the amount of light to unleash, and roll +light (instead of +iron or +edge). Suffer -light equal to that amount. On a hit, your harm is 1+your unleashed light.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
+        ],
+        track: '6'
+    },
+    'scry': {
+        skills: [
+            "When you look into flames to study a remote person or location, roll +shadow. You or someone with you must have knowledge of the target. On a strong hit, you may Gather Information through observation using +shadow or +wits. On a weak hit, as above, but the flames are hungry; choose one to sacrifice. • Your blood: Endure Harm (2 harm). • A precious thing: Endure Stress (2 stress). • Provisions: Suffer -2 supply",
+            "As above, and you may study a past event. ",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'shadow-walk': {
         skills: [
-            "",
-            "",
-            ""
+            "When you cloak yourself with the gossamer veil of the shadow realms, roll +shadow. On a strong hit, take +1 momentum. Then, reroll any dice (one time only) when you make a move by ambushing, hiding, or sneaking. On a weak hit, as above, but the shadows try to lead you astray. You must first Face Danger to find your way.",
+            "As above, and you may also travel along the hidden paths of the shadow realms to Undertake a Journey using +shadow (instead of +wits). If you do, Endure Stress (1 stress) and mark progress twice on a strong hit.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'sway': {
         skills: [
-            "",
-            "",
-            ""
+            "When you speak a person’s name three times to the wind, roll +wits. On a strong hit, the wind whispers of this person’s need. Envision what you hear (Ask the Oracle if unsure). If you use this information or fulfill this need when you Compel them, you may reroll any dice (one time only). On a weak hit, as above, but this person’s need creates a troubling dilemma or complication; Endure Stress (1 stress).",
+            "As above, and if you roll a strong hit when you Compel, you may also reroll any dice (one time only) when you Gather Information from this person.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'talisman': {
         skills: [
-            "",
-            "",
-            ""
+            "When you fashion a charm, envision it and name the specific person or creature it protects against. Then roll +wits. On a strong hit, when the wearer opposes the target through a move, add +2. If a 1 is rolled on the action die while making a move using the charm, the magic is spent. On a weak hit, as above, but the wearer adds +1 when making a move (instead of +2).",
+            "As above, and you may instead fashion a charm which aids the wearer against all supernatural threats, such as mystic rituals or horrors.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit"
         ] 
     },
-    '': {
-        requirement: "",
+    'tether': {
         skills: [
-            "",
-            "",
-            ""
+            "When you commune with the spirits of a place, roll +heart. If you share a bond with someone there, add +1. On a strong hit, you are tethered. When you Undertake a Journey to return, you may roll +spirit or +heart (instead of +wits), and take +1 momentum on a hit. When you Reach Your Destination, take +2 momentum on a strong hit. The tether is lost if you perform this ritual elsewhere, or when you Face Desolation. On a weak hit, as above, but the spirits reveal a disturbing aspect of the place; Endure Stress (2 stress)",
+            "As above, and you may also reroll any dice when you Sojourn in the tethered place.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'totem': {
         skills: [
-            "",
-            "",
-            ""
+            "When you hold a totem of your animal companion and focus on it, roll +heart. On a strong hit, you are bound together. Add +1 and take +1 momentum on a hit when you use a companion ability. If you roll a 1 on your action die when using a companion ability, the magic is spent. On a weak hit, as above, but creating this connection is unsettling; Endure Stress (1 stress)",
+            "As above, and you may also perceive the world through your companion’s senses while you make moves aided by them (even when you are apart).",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     },
-    '': {
-        requirement: "",
+    'visage': {
         skills: [
-            "",
-            "",
-            ""
+            "When you paint yourself in blood and ash, roll +wits. On a strong hit, you may add +2 and take +1 momentum on a hit when you Secure an Advantage or Compel using fear or intimidation. If you roll a 1 on your action die when making a move aided by your visage, the magic is spent. On a weak hit, as above, but the blood must be your own; Endure Harm (2 harm).",
+            "As above, and you may also add +1 when you Strike, Clash, or Battle.",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit"
         ] 
     },
-    '': {
-        requirement: "",
+    'ward': {
         skills: [
-            "",
-            "",
-            ""
+            "When you walk a wide circle, sprinkling the ground with salt, roll +wits. On a strong hit, choose two. On a weak hit, chose one. • When a foe first crosses the boundary, take +1 momentum. • When you first inflict harm against a foe within the boundary, inflict +1 harm. • Your ward is ‘likely’ (Ask the Oracle) to trap a foe within the boundary.",
+            "As above, and improve the effect of your ward (+2 momentum, +2 harm, and ‘almost certain’).",
+            "When you perform this ritual, add +1 and take +1 momentum on a hit."
         ] 
     }
 };
