--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -1414,7 +1414,7 @@
                         <option value="sway">Sway</option>
                         <option value="talisman">Talisman</option>
                         <option value="tether">Tether</option>
-                        <option value="totem">Sotem</option>
+                        <option value="totem">Totem</option>
                         <option value="visage">Visage</option>
                         <option value="ward">Ward</option>
                     </select>
